--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,8 @@
+body,
+html {
+	overflow-x: hidden;
+}
+
 .contentWrapper {
 	max-width: 1200px;
 	height: 100vh;
@@ -7,4 +12,15 @@
 	grid-template-columns: 1fr 453px;
 	column-gap: 120px;
 	position: relative;
+}
+
+.contentSigned::before {
+	content: "";
+	height: 100vh;
+	width: 420px;
+	background: url("./assets/background.svg") no-repeat;
+	background-size: cover;
+	position: absolute;
+	right: 0;
+	transform: translateX(200px);
 }
